[package]

name = "queryst-prime"
version = "2.0.0"
authors = ["Stanislav Panferov <fnight.m@gmail.com>", "Robert Lord <hello@lord.io>"]
description = "Rust query string parser with nesting support, forked to update Serde"
repository = "https://github.com/rustless/queryst"
keywords = ["json", "web", "url", "parser"]
license = "MIT"

[dependencies]
serde = "1.0"
serde_json = "1.0"
url = "1"
regex = "0.1"
lazy_static = "0.2"
